<resources>
    <string name="app_name" translatable="false">LaFiores</string>
    <string name="consumer_key" translatable="false">ck_085bf7135759feb1c3b22a57531e537369dc1ecb</string>
    <string name="consumer_secret" translatable="false">cs_d129ae26ab7c1f29ed5416efbdacc2459a5c60fd</string>
    <string name="lang">ru</string>
    <string name="error_network_connection">Нет соединения! Проверьте интернет-соединение!</string>
    <string name="error_network_connection_restart_button">Обновить</string>
    <string name="downloadProducts">Загружаем товары...</string>
    <string name="buyButton">Купить</string>
    <string name="login_button">Войти</string>
    <string name="your_password">Ваш пароль</string>
    <string name="your_email">Ваш Email</string>
    <string name="email_edit_text_empty_error">Введите email</string>
    <string name="email_edit_text_error">Неправильный email!</string>
    <string name="password_edit_text_empty_error">Введите пароль!</string>
    <string name="password_edit_text_short_error">Короткий пароль!</string>
    <string name="password_edit_text_long_error">Слишком длинный пароль</string>
    <string name="email_edit_text_long_error">Слишком длинный email</string>
    <string name="email_edit_text_short_error">Короткий email</string>
    <string name="create_user_error">Ошибка регистрации</string>
    <string name="welcome_auth">Авторизация</string>
    <string name="your_password_confirm">Подтвердите пароль</string>
    <string name="switch_to_register">Зарегистрироваться</string>
    <string name="switch_to_auth">Уже зарегистрированы?</string>
    <string name="email_edit_text__empty_error">Введите email</string>
    <string name="switch_auth_register">Регистрация</string>
    <string name="register_button">Регистрация</string>
    <string name="password_edit_text_not_match_error">Пароли не совпадают!</string>
    <string name="sign_out">Выйти</string>
    <string name="confirm_password_edit_text_empty_error">Подтвердите пароль!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_product"><u>Описание</u></string>
    <string name="change_on_details_product_view"><u>Характеристики</u></string>
    <string name="notInternet">Нет интернета!</string>
</resources>
